improved mobile format, prevented resizing when pic changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,10 @@ div.image {
     text-transform: uppercase;
 }
 
+#pic {
+    min-height: 356px;
+}
+
 img.pic {
     border: solid 3px;
     border-color: #666666;
