added more effective WIN/LOSE STATE communications. new WIN pick used. gameplay pauses when user WINS or LOSES. buttons turn GREEN/RED as user makes guesses.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,29 @@ div.select:hover {
     cursor:pointer;
 }
 
+div.shuffle:hover{
+    cursor:pointer;
+}
+
+div.green {
+    background-color: darkgreen;
+}
+
+div.red {
+    background-color: darkred;
+}
+
+div.green:hover {
+    cursor: default;
+}
+
+div.red:hover {
+    cursor: default;
+}
+
+#emph {
+    color: blue;
+}
 
 span.green, span.red {
     clear: both;
