--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ div.center {
 div.wins, div.loses, div.tries, div.font, div.letters {
     display: inline-block;
     padding: 10px;
-    background-color: #ffffff;
     font-weight: bolder;
 }
 
@@ -54,7 +53,7 @@ div.font {
 
 div.image {
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: #cccccc;
     text-transform: uppercase;
     height: 100vh;
 }
