--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ div.image {
     margin: 0 auto;
     background-color: #cccccc;
     text-transform: uppercase;
-    height: 100vh;
+    height: 100%;
 }
 
 #pic {
