--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ div.main {
     max-width: 500px; 
     min-width: 360px;
     margin: 0 auto;
+    padding-top: 10px;
 }
 
 div.center {
@@ -53,6 +54,7 @@ div.font {
 
 div.image {
     margin: 0 auto;
+    padding-top: 10px;
     background-color: #cccccc;
     text-transform: uppercase;
     height: 100%;
